Replaced old aerialAccel method and implemented P-Speed run/jump states and Backflips.